--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/header.html" />
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./partials/hero.html" />
+      <load src="./partials/about-us.html" />
+      <load src="./partials/our-yachts.html" />
+      <load src="./partials/advantages.html" />
+      <load src="./partials/rent-a-yacht.html" />
+      <load src="./partials/reviews.html" />
     </main>
 
     <load src="./partials/footer.html" />
