--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <load src="./partials/header.html" />
+    <load src="./partials/mobile-menu.html" />
 
     <main>
       <!-- Loads the specified .html file -->
@@ -34,6 +35,7 @@
     </main>
 
     <load src="./partials/footer.html" />
+    <load src="./partials/backdrop.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
