--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,6 @@
     <load src="./partials/footer.html" />
     <load src="./partials/backdrop.html" />
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
