--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,11 @@
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/hero.html" />
-      <load src="./partials/about-us.html" />
+      <div class="box-image">
+        <load src="./partials/hero.html" />
+        <load src="./partials/about-us.html" />
+      </div>
+
       <load src="./partials/our-yachts.html" />
       <load src="./partials/advantages.html" />
       <load src="./partials/rent-a-yacht.html" />
